# TurtleBot

./: README.md
Poject1/launch/: start_robot.launch
Poject1/map/: map.pgm  map.yaml
Poject1/src/: map_goals.cpp
exercise1/msg/: Greeting.msg
exercise1/src/: publish_custom_msg_node.cpp  subscribe_custom_msg_node.cpp
exercise2/: CMakeLists.txt
exercise2/launch/: controller.launch  movement.launch  randomwalk.launch  rectangle.launch
exercise2/msg/: move_type.txt  publisher_subscriber.txt
exercise2/scripts/: controller  movement
exercise2/src/: pubvel.cpp
exercise3/: CMakeLists.txt  package.xml
exercise3/launch/: amcl_demo.launch  map_goals.launch  rins_world.launch  start_robot.launch  surveliance.launch
exercise3/map/: map.pgm  map.yaml
exercise3/scripts/: surveilance
exercise3/src/: map_goals.cpp
exercise3/worlds/: mapa1.pgm  mapa1.xcf  mapa1.yaml  rins.world  rins_world.dae
exercise4/: CMakeLists.txt
exercise4/launch/: amcl_demo.launch  breadcrumbs.launch  surv.launch
exercise4/scripts/: breadcrumbs  detect_rings  original_detect.py  surv
exercise5/pcl_demos/: CMakeLists.txt  package.xml
exercise6/: CMakeLists.txt  package.xml
exercise7/: CMakeLists.txt  package.xml
exercise7/scripts/: rectify_rings
openservorobot/: CMakeLists.txt  package.xml
openservorobot/launch/: manipulator.launch
openservorobot/msg/: JointDescriptionM.msg  JointStateM.msg  ManipulatorDescriptionM.msg  ManipulatorStateM.msg  MoveJoint.msg
openservorobot/res/: calibration_1.yaml  (+9 more)
pr1/: CMakeLists.txt  package.xml
pr1/launch/: amcl_demo.launch  control_manip.launch  costmap_common_params.yaml  find_cylinder.launch  manip.launch  move_base.launch.xml  navi.launch  start_robot.launch
pr1/map/: map.pgm  map.yaml
pr1/src/: best-cilinder-corrected-values.cpp  best-cilinder.cpp  best-navi.cpp  circle_detect.py  control_manipulator  cylinder_detect.cpp  cylinder_segmentation.cpp  delete_markers.py  navi.cpp  original_detect.py  original_detect_markers.py  points.txt  robot_arm  updating_markers_in_progress.py
(+27 files in other folders)
